<?xml version="1.0"?>
<package format="2">
  <name>openstf2ros</name>
  <version>0.0.0</version>
  <description>The openstf2ros package</description>

  <maintainer email="sgulyaevsky@gmail.com">Sergey Gulyaevsky</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/sgulyaevsky/openstf2ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
